uploads: fix dropzone previews being stretched.

--- a/app/javascript/src/styles/specific/dropzone.scss
+++ b/app/javascript/src/styles/specific/dropzone.scss
@@ -17,6 +17,7 @@
 
     &.dz-image-preview img {
       margin: 1em 0;
+      object-fit: contain;
     }
 
     .dz-details  {
